<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/myCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_regular">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeText"
        android:text="@string/welcome_text"
        android:gravity="center"/>
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_login_top">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressLoader"
            style="?android:attr/progressBarStyle"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:autofillHints="email"
            android:layout_marginTop="@dimen/margin_regular"
            android:hint="@string/email_hint"
            android:id="@+id/emailTextView"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/margin_regular"
            android:hint="@string/password_hint"
            android:id="@+id/passwordTextView"
            android:layout_below="@+id/emailTextView"
            android:autofillHints="password" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/holo_green_light"
            android:layout_marginTop="@dimen/margin_regular"
            android:id="@+id/submitButton"
            android:text="@string/login"
            android:layout_below="@+id/passwordTextView"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:layout_marginTop="@dimen/margin_regular"
            android:id="@+id/signUpButton"
            android:text="@string/signup"
            android:layout_below="@+id/submitButton"/>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>